# creator

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  README.md  creator.code-workspace
.github/workflows/: build.yml  cargo-wix.yml  rust-check.yml  rust.yml  win-package-msi.yml
assets/: .$logo.drawio.svg.bkp
docs/: design.md
docs/design/: sequence.puml
examples/c++/meson_project/: build.ps1  install.ps1  meson.build  test.ps1
examples/c++/meson_project/src/: main.cpp
examples/c++/meson_project/subprojects/hello/: meson.build
examples/c++/meson_project/subprojects/hello/include/: @{Main File Name}@.h
examples/c++/meson_project/subprojects/hello/src/: @{Main File Name}@.c
examples/c++/meson_project/subprojects/hello/test/unit/: test_hello.cpp
examples/python/package_with_setup/: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
examples/python/package_with_setup/src/@{Package Name}@/: __init__.py
examples/rust/new_module/: @{Nested File Name}@.rs  mod.rs
scripts/: devtemplate  devtemplate.psm1  export.sh
src/: app.rs  app_config.rs  creator.rs  creator_operations.rs  directory.rs  directory_analyzer.rs  environment.rs  file_operator.rs  main.rs  tui.rs  tui_theme.toml
src/tui/: builders.rs  dialog_main.rs  dialog_select_template.rs  dialog_template_config.rs  mod.rs  strings.rs  theme.rs  wrappers.rs
tests/assets/test_input/: README.md
tests/assets/test_input/#dt_dir_name#_src/: #dt_module_name2#.py
tests/test_storage/test_group/_test_template/: README.md
tests/test_storage/test_group/_test_template/#var_dir_name#_src/: #var_module_name2#.py
wix/: License.rtf  main.wxs
