[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[profile.dev]
opt-level = 1

[package]
edition = "2021"
name = "creator"
version = "1.0.1"
description = "Application for creation new files and projects from user templates"
repository = "https://github.com/an-dr/creator"
license = "MIT"
authors = ["Andrei Gramakov <mail@agramakov.me>"]

[dependencies]
cursive = {version = "0.21", features = [ "toml" ]}
directories = "6.0"
log = "0.4"
once_cell = "1.20.2"
regex = "1.11"
simplelog = "0.12"
walkdir = "2.5"
