[metadata]
name = @{Package Name}@
author = @{Author}@
author_email = developer@inter.net
version = attr: @{Package Name}@.__version__
url = https://github.com/an-dr
description = Short Description
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = 
license = MIT
license_file = LICENSE
requires_dist = setuptools
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =

[options.package_data]
* = README.md
    
[options.extras_require]
dev = 
    setupext-janitor
    black
    
[options.packages.find]
where = src
